TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    NEWLINE

Grammar

Rule 0     S' -> prog
Rule 1     prog -> seccoes
Rule 2     seccoes -> seccoes seccao
Rule 3     seccoes -> <empty>
Rule 4     seccao -> LEXSTART lex termino
Rule 5     seccao -> YACCSTART yacc termino
Rule 6     termino -> END
Rule 7     termino -> seccao
Rule 8     lex -> lexParametros
Rule 9     lexParametros -> <empty>
Rule 10    lexParametros -> lexParametros lexParametro
Rule 11    lexParametro -> lexToken
Rule 12    lexParametro -> lexRegra
Rule 13    lexToken -> ID context = ER tokenFunc changeContext
Rule 14    context -> <empty>
Rule 15    context -> ( ID )
Rule 16    context -> ID
Rule 17    tokenFunc -> <empty>
Rule 18    tokenFunc -> FSTR
Rule 19    tokenFunc -> FINT
Rule 20    tokenFunc -> FFLOAT
Rule 21    changeContext -> <empty>
Rule 22    changeContext -> CHANGECONTEXT ID
Rule 23    changeContext -> CHANGECONTEXT ( ID )
Rule 24    lexRegra -> lexIgnore
Rule 25    lexRegra -> lexLiterals
Rule 26    lexRegra -> lexContexts
Rule 27    lexRegra -> comError
Rule 28    lexIgnore -> LEXIGNORE context = STRING
Rule 29    lexLiterals -> LEXLITERALS context = STRING
Rule 30    lexContexts -> LEXCONTEXT = [ lexContexTuplos ]
Rule 31    lexContexTuplos -> lexContexTuplo
Rule 32    lexContexTuplos -> lexContexTuplos , lexContexTuplo
Rule 33    lexContexTuplo -> ( ID , ID )
Rule 34    comError -> COMERROR context = comErrorMessage skipOps
Rule 35    comErrorMessage -> <empty>
Rule 36    comErrorMessage -> STRING
Rule 37    skipOps -> SKIP
Rule 38    skipOps -> NOSKIP
Rule 39    yacc -> yaccParametros
Rule 40    yaccParametros -> <empty>
Rule 41    yaccParametros -> yaccParametros yaccParametro
Rule 42    yaccParametro -> yaccVar
Rule 43    yaccParametro -> yaccRegra
Rule 44    yaccParametro -> yaccProd
Rule 45    yaccRegra -> yaccPrecedence
Rule 46    yaccRegra -> comError
Rule 47    yaccPrecedence -> YACCPRECEDENCE = ( yaccPreTuplos )
Rule 48    yaccPreTuplos -> yaccPreTuplo
Rule 49    yaccPreTuplos -> yaccPreTuplos , yaccPreTuplo
Rule 50    yaccPreTuplo -> ( STRING , STRING yaccPreTuploOP
Rule 51    yaccPreTuploOP -> )
Rule 52    yaccPreTuploOP -> , STRING yaccPreTuploOP
Rule 53    yaccVar -> ID = VarValue
Rule 54    VarValue -> STRING
Rule 55    VarValue -> NUMVAL
Rule 56    VarValue -> EMPTYLIST
Rule 57    VarValue -> EMPTYDIC
Rule 58    yaccProd -> ID yaccProdAlias : yaccProdValue yaccProdCod
Rule 59    yaccProdAlias -> <empty>
Rule 60    yaccProdAlias -> ( ID )
Rule 61    yaccProdAlias -> ID
Rule 62    yaccProdValue -> <empty>
Rule 63    yaccProdValue -> STRING
Rule 64    yaccProdCod -> <empty>
Rule 65    yaccProdCod -> CODIGO

Terminals, with rules where they appear

(                    : 15 23 33 47 50 60
)                    : 15 23 33 47 51 60
,                    : 32 33 49 50 52
:                    : 58
=                    : 13 28 29 30 34 47 53
CHANGECONTEXT        : 22 23
CODIGO               : 65
COMERROR             : 34
COMMENT              : 
EMPTYDIC             : 57
EMPTYLIST            : 56
END                  : 6
ER                   : 13
FFLOAT               : 20
FINT                 : 19
FSTR                 : 18
ID                   : 13 15 16 22 23 33 33 53 58 60 61
LEXCONTEXT           : 30
LEXIGNORE            : 28
LEXLITERALS          : 29
LEXSTART             : 4
NEWLINE              : 
NOSKIP               : 38
NUMVAL               : 55
SKIP                 : 37
STRING               : 28 29 36 50 50 52 54 63
YACCPRECEDENCE       : 47
YACCSTART            : 5
[                    : 30
]                    : 30
error                : 

Nonterminals, with rules where they appear

VarValue             : 53
changeContext        : 13
comError             : 27 46
comErrorMessage      : 34
context              : 13 28 29 34
lex                  : 4
lexContexTuplo       : 31 32
lexContexTuplos      : 30 32
lexContexts          : 26
lexIgnore            : 24
lexLiterals          : 25
lexParametro         : 10
lexParametros        : 8 10
lexRegra             : 12
lexToken             : 11
prog                 : 0
seccao               : 2 7
seccoes              : 1 2
skipOps              : 34
termino              : 4 5
tokenFunc            : 13
yacc                 : 5
yaccParametro        : 41
yaccParametros       : 39 41
yaccPreTuplo         : 48 49
yaccPreTuploOP       : 50 52
yaccPreTuplos        : 47 49
yaccPrecedence       : 45
yaccProd             : 44
yaccProdAlias        : 58
yaccProdCod          : 58
yaccProdValue        : 58
yaccRegra            : 43
yaccVar              : 42

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . seccoes
    (2) seccoes -> . seccoes seccao
    (3) seccoes -> .

    LEXSTART        reduce using rule 3 (seccoes -> .)
    YACCSTART       reduce using rule 3 (seccoes -> .)
    $end            reduce using rule 3 (seccoes -> .)

    prog                           shift and go to state 1
    seccoes                        shift and go to state 2

state 1

    (0) S' -> prog .



state 2

    (1) prog -> seccoes .
    (2) seccoes -> seccoes . seccao
    (4) seccao -> . LEXSTART lex termino
    (5) seccao -> . YACCSTART yacc termino

    $end            reduce using rule 1 (prog -> seccoes .)
    LEXSTART        shift and go to state 4
    YACCSTART       shift and go to state 5

    seccao                         shift and go to state 3

state 3

    (2) seccoes -> seccoes seccao .

    LEXSTART        reduce using rule 2 (seccoes -> seccoes seccao .)
    YACCSTART       reduce using rule 2 (seccoes -> seccoes seccao .)
    $end            reduce using rule 2 (seccoes -> seccoes seccao .)


state 4

    (4) seccao -> LEXSTART . lex termino
    (8) lex -> . lexParametros
    (9) lexParametros -> .
    (10) lexParametros -> . lexParametros lexParametro

    ID              reduce using rule 9 (lexParametros -> .)
    LEXIGNORE       reduce using rule 9 (lexParametros -> .)
    LEXLITERALS     reduce using rule 9 (lexParametros -> .)
    LEXCONTEXT      reduce using rule 9 (lexParametros -> .)
    COMERROR        reduce using rule 9 (lexParametros -> .)
    END             reduce using rule 9 (lexParametros -> .)
    LEXSTART        reduce using rule 9 (lexParametros -> .)
    YACCSTART       reduce using rule 9 (lexParametros -> .)

    lex                            shift and go to state 6
    lexParametros                  shift and go to state 7

state 5

    (5) seccao -> YACCSTART . yacc termino
    (39) yacc -> . yaccParametros
    (40) yaccParametros -> .
    (41) yaccParametros -> . yaccParametros yaccParametro

    ID              reduce using rule 40 (yaccParametros -> .)
    YACCPRECEDENCE  reduce using rule 40 (yaccParametros -> .)
    COMERROR        reduce using rule 40 (yaccParametros -> .)
    END             reduce using rule 40 (yaccParametros -> .)
    LEXSTART        reduce using rule 40 (yaccParametros -> .)
    YACCSTART       reduce using rule 40 (yaccParametros -> .)

    yacc                           shift and go to state 8
    yaccParametros                 shift and go to state 9

state 6

    (4) seccao -> LEXSTART lex . termino
    (6) termino -> . END
    (7) termino -> . seccao
    (4) seccao -> . LEXSTART lex termino
    (5) seccao -> . YACCSTART yacc termino

    END             shift and go to state 11
    LEXSTART        shift and go to state 4
    YACCSTART       shift and go to state 5

    termino                        shift and go to state 10
    seccao                         shift and go to state 12

state 7

    (8) lex -> lexParametros .
    (10) lexParametros -> lexParametros . lexParametro
    (11) lexParametro -> . lexToken
    (12) lexParametro -> . lexRegra
    (13) lexToken -> . ID context = ER tokenFunc changeContext
    (24) lexRegra -> . lexIgnore
    (25) lexRegra -> . lexLiterals
    (26) lexRegra -> . lexContexts
    (27) lexRegra -> . comError
    (28) lexIgnore -> . LEXIGNORE context = STRING
    (29) lexLiterals -> . LEXLITERALS context = STRING
    (30) lexContexts -> . LEXCONTEXT = [ lexContexTuplos ]
    (34) comError -> . COMERROR context = comErrorMessage skipOps

    END             reduce using rule 8 (lex -> lexParametros .)
    LEXSTART        reduce using rule 8 (lex -> lexParametros .)
    YACCSTART       reduce using rule 8 (lex -> lexParametros .)
    ID              shift and go to state 16
    LEXIGNORE       shift and go to state 21
    LEXLITERALS     shift and go to state 22
    LEXCONTEXT      shift and go to state 23
    COMERROR        shift and go to state 24

    lexParametro                   shift and go to state 13
    lexToken                       shift and go to state 14
    lexRegra                       shift and go to state 15
    lexIgnore                      shift and go to state 17
    lexLiterals                    shift and go to state 18
    lexContexts                    shift and go to state 19
    comError                       shift and go to state 20

state 8

    (5) seccao -> YACCSTART yacc . termino
    (6) termino -> . END
    (7) termino -> . seccao
    (4) seccao -> . LEXSTART lex termino
    (5) seccao -> . YACCSTART yacc termino

    END             shift and go to state 11
    LEXSTART        shift and go to state 4
    YACCSTART       shift and go to state 5

    termino                        shift and go to state 25
    seccao                         shift and go to state 12

state 9

    (39) yacc -> yaccParametros .
    (41) yaccParametros -> yaccParametros . yaccParametro
    (42) yaccParametro -> . yaccVar
    (43) yaccParametro -> . yaccRegra
    (44) yaccParametro -> . yaccProd
    (53) yaccVar -> . ID = VarValue
    (45) yaccRegra -> . yaccPrecedence
    (46) yaccRegra -> . comError
    (58) yaccProd -> . ID yaccProdAlias : yaccProdValue yaccProdCod
    (47) yaccPrecedence -> . YACCPRECEDENCE = ( yaccPreTuplos )
    (34) comError -> . COMERROR context = comErrorMessage skipOps

    END             reduce using rule 39 (yacc -> yaccParametros .)
    LEXSTART        reduce using rule 39 (yacc -> yaccParametros .)
    YACCSTART       reduce using rule 39 (yacc -> yaccParametros .)
    ID              shift and go to state 30
    YACCPRECEDENCE  shift and go to state 33
    COMERROR        shift and go to state 24

    yaccParametro                  shift and go to state 26
    yaccVar                        shift and go to state 27
    yaccRegra                      shift and go to state 28
    yaccProd                       shift and go to state 29
    yaccPrecedence                 shift and go to state 31
    comError                       shift and go to state 32

state 10

    (4) seccao -> LEXSTART lex termino .

    LEXSTART        reduce using rule 4 (seccao -> LEXSTART lex termino .)
    YACCSTART       reduce using rule 4 (seccao -> LEXSTART lex termino .)
    $end            reduce using rule 4 (seccao -> LEXSTART lex termino .)


state 11

    (6) termino -> END .

    LEXSTART        reduce using rule 6 (termino -> END .)
    YACCSTART       reduce using rule 6 (termino -> END .)
    $end            reduce using rule 6 (termino -> END .)


state 12

    (7) termino -> seccao .

    LEXSTART        reduce using rule 7 (termino -> seccao .)
    YACCSTART       reduce using rule 7 (termino -> seccao .)
    $end            reduce using rule 7 (termino -> seccao .)


state 13

    (10) lexParametros -> lexParametros lexParametro .

    ID              reduce using rule 10 (lexParametros -> lexParametros lexParametro .)
    LEXIGNORE       reduce using rule 10 (lexParametros -> lexParametros lexParametro .)
    LEXLITERALS     reduce using rule 10 (lexParametros -> lexParametros lexParametro .)
    LEXCONTEXT      reduce using rule 10 (lexParametros -> lexParametros lexParametro .)
    COMERROR        reduce using rule 10 (lexParametros -> lexParametros lexParametro .)
    END             reduce using rule 10 (lexParametros -> lexParametros lexParametro .)
    LEXSTART        reduce using rule 10 (lexParametros -> lexParametros lexParametro .)
    YACCSTART       reduce using rule 10 (lexParametros -> lexParametros lexParametro .)


state 14

    (11) lexParametro -> lexToken .

    ID              reduce using rule 11 (lexParametro -> lexToken .)
    LEXIGNORE       reduce using rule 11 (lexParametro -> lexToken .)
    LEXLITERALS     reduce using rule 11 (lexParametro -> lexToken .)
    LEXCONTEXT      reduce using rule 11 (lexParametro -> lexToken .)
    COMERROR        reduce using rule 11 (lexParametro -> lexToken .)
    END             reduce using rule 11 (lexParametro -> lexToken .)
    LEXSTART        reduce using rule 11 (lexParametro -> lexToken .)
    YACCSTART       reduce using rule 11 (lexParametro -> lexToken .)


state 15

    (12) lexParametro -> lexRegra .

    ID              reduce using rule 12 (lexParametro -> lexRegra .)
    LEXIGNORE       reduce using rule 12 (lexParametro -> lexRegra .)
    LEXLITERALS     reduce using rule 12 (lexParametro -> lexRegra .)
    LEXCONTEXT      reduce using rule 12 (lexParametro -> lexRegra .)
    COMERROR        reduce using rule 12 (lexParametro -> lexRegra .)
    END             reduce using rule 12 (lexParametro -> lexRegra .)
    LEXSTART        reduce using rule 12 (lexParametro -> lexRegra .)
    YACCSTART       reduce using rule 12 (lexParametro -> lexRegra .)


state 16

    (13) lexToken -> ID . context = ER tokenFunc changeContext
    (14) context -> .
    (15) context -> . ( ID )
    (16) context -> . ID

    =               reduce using rule 14 (context -> .)
    (               shift and go to state 36
    ID              shift and go to state 34

    context                        shift and go to state 35

state 17

    (24) lexRegra -> lexIgnore .

    ID              reduce using rule 24 (lexRegra -> lexIgnore .)
    LEXIGNORE       reduce using rule 24 (lexRegra -> lexIgnore .)
    LEXLITERALS     reduce using rule 24 (lexRegra -> lexIgnore .)
    LEXCONTEXT      reduce using rule 24 (lexRegra -> lexIgnore .)
    COMERROR        reduce using rule 24 (lexRegra -> lexIgnore .)
    END             reduce using rule 24 (lexRegra -> lexIgnore .)
    LEXSTART        reduce using rule 24 (lexRegra -> lexIgnore .)
    YACCSTART       reduce using rule 24 (lexRegra -> lexIgnore .)


state 18

    (25) lexRegra -> lexLiterals .

    ID              reduce using rule 25 (lexRegra -> lexLiterals .)
    LEXIGNORE       reduce using rule 25 (lexRegra -> lexLiterals .)
    LEXLITERALS     reduce using rule 25 (lexRegra -> lexLiterals .)
    LEXCONTEXT      reduce using rule 25 (lexRegra -> lexLiterals .)
    COMERROR        reduce using rule 25 (lexRegra -> lexLiterals .)
    END             reduce using rule 25 (lexRegra -> lexLiterals .)
    LEXSTART        reduce using rule 25 (lexRegra -> lexLiterals .)
    YACCSTART       reduce using rule 25 (lexRegra -> lexLiterals .)


state 19

    (26) lexRegra -> lexContexts .

    ID              reduce using rule 26 (lexRegra -> lexContexts .)
    LEXIGNORE       reduce using rule 26 (lexRegra -> lexContexts .)
    LEXLITERALS     reduce using rule 26 (lexRegra -> lexContexts .)
    LEXCONTEXT      reduce using rule 26 (lexRegra -> lexContexts .)
    COMERROR        reduce using rule 26 (lexRegra -> lexContexts .)
    END             reduce using rule 26 (lexRegra -> lexContexts .)
    LEXSTART        reduce using rule 26 (lexRegra -> lexContexts .)
    YACCSTART       reduce using rule 26 (lexRegra -> lexContexts .)


state 20

    (27) lexRegra -> comError .

    ID              reduce using rule 27 (lexRegra -> comError .)
    LEXIGNORE       reduce using rule 27 (lexRegra -> comError .)
    LEXLITERALS     reduce using rule 27 (lexRegra -> comError .)
    LEXCONTEXT      reduce using rule 27 (lexRegra -> comError .)
    COMERROR        reduce using rule 27 (lexRegra -> comError .)
    END             reduce using rule 27 (lexRegra -> comError .)
    LEXSTART        reduce using rule 27 (lexRegra -> comError .)
    YACCSTART       reduce using rule 27 (lexRegra -> comError .)


state 21

    (28) lexIgnore -> LEXIGNORE . context = STRING
    (14) context -> .
    (15) context -> . ( ID )
    (16) context -> . ID

    =               reduce using rule 14 (context -> .)
    (               shift and go to state 36
    ID              shift and go to state 34

    context                        shift and go to state 37

state 22

    (29) lexLiterals -> LEXLITERALS . context = STRING
    (14) context -> .
    (15) context -> . ( ID )
    (16) context -> . ID

    =               reduce using rule 14 (context -> .)
    (               shift and go to state 36
    ID              shift and go to state 34

    context                        shift and go to state 38

state 23

    (30) lexContexts -> LEXCONTEXT . = [ lexContexTuplos ]

    =               shift and go to state 39


state 24

    (34) comError -> COMERROR . context = comErrorMessage skipOps
    (14) context -> .
    (15) context -> . ( ID )
    (16) context -> . ID

    =               reduce using rule 14 (context -> .)
    (               shift and go to state 36
    ID              shift and go to state 34

    context                        shift and go to state 40

state 25

    (5) seccao -> YACCSTART yacc termino .

    LEXSTART        reduce using rule 5 (seccao -> YACCSTART yacc termino .)
    YACCSTART       reduce using rule 5 (seccao -> YACCSTART yacc termino .)
    $end            reduce using rule 5 (seccao -> YACCSTART yacc termino .)


state 26

    (41) yaccParametros -> yaccParametros yaccParametro .

    ID              reduce using rule 41 (yaccParametros -> yaccParametros yaccParametro .)
    YACCPRECEDENCE  reduce using rule 41 (yaccParametros -> yaccParametros yaccParametro .)
    COMERROR        reduce using rule 41 (yaccParametros -> yaccParametros yaccParametro .)
    END             reduce using rule 41 (yaccParametros -> yaccParametros yaccParametro .)
    LEXSTART        reduce using rule 41 (yaccParametros -> yaccParametros yaccParametro .)
    YACCSTART       reduce using rule 41 (yaccParametros -> yaccParametros yaccParametro .)


state 27

    (42) yaccParametro -> yaccVar .

    ID              reduce using rule 42 (yaccParametro -> yaccVar .)
    YACCPRECEDENCE  reduce using rule 42 (yaccParametro -> yaccVar .)
    COMERROR        reduce using rule 42 (yaccParametro -> yaccVar .)
    END             reduce using rule 42 (yaccParametro -> yaccVar .)
    LEXSTART        reduce using rule 42 (yaccParametro -> yaccVar .)
    YACCSTART       reduce using rule 42 (yaccParametro -> yaccVar .)


state 28

    (43) yaccParametro -> yaccRegra .
